--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,17 @@
   </head>
 
   <body>
-  <main>
+  <header>
+      <nav>
+        <% if user_signed_in? %>
+          <%= current_user.email %>
+          <%= button_to 'Sair', destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to 'Entrar', new_user_session_path %>
+        <% end %>
+      </nav> 
+    </header>
+    <main>
       <div>
         <%= alert %>
         <%= notice %>
