--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
   <header>
       <nav>
         <% if user_signed_in? %>
-          <%= current_user.email %>
+          <%= current_user.email %> |
+          <%= link_to 'Clientes', clients_path %>
           <%= button_to 'Sair', destroy_user_session_path, method: :delete %>
         <% else %>
           <%= link_to 'Entrar', new_user_session_path %>
