Add delete button to client

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -13,7 +13,9 @@
   </dl>
 </div>
 
-
+<div>
+  <%= button_to 'Deletar', client_path(@client), method: :delete%>
+</div>
 <div>
   <%= link_to 'Voltar', clients_path %>
 </div>
