Add edit function to client

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -14,7 +14,10 @@
 </div>
 
 <div>
-  <%= button_to 'Deletar', client_path(@client), method: :delete%>
+  <%= button_to 'Deletar', client_path(@client), method: :delete %>
+</div>
+<div>
+  <%= link_to 'Editar', edit_client_path(@client)%>
 </div>
 <div>
   <%= link_to 'Voltar', clients_path %>
