--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
       <nav>
         <% if user_signed_in? %>
           <%= current_user.email %> |
-          <%= link_to 'Clientes', clients_path %>
+          <%= link_to 'Clientes', clients_path %> |
+          <%= link_to 'Categorias de Produtos', categories_path %> |
           <%= button_to 'Sair', destroy_user_session_path, method: :delete %>
         <% else %>
           <%= link_to 'Entrar', new_user_session_path %>
