Add create function to category

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Categorias</h1>
-
+<%= link_to 'Nova Categoria', new_category_path %><br>
 <% if @categories.empty? %>
   <p>Não há categoria cadastrada</p>
 <% else %>
