--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,12 +7,14 @@
     <thead>
       <tr>
         <th>Nome da Categoria</th>
+         <th colspan="3">Ação</th>
       </tr>
     </thead>
     <tbody>
       <% @categories.each do |category| %>
         <tr>
           <td><%= category.name %></td>
+           <td><%= button_to 'Deletar', category, method: :delete  %></td>
         </tr>
       <% end %>
     </tbody>
