Add create function to category

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -14,7 +14,8 @@
       <% @categories.each do |category| %>
         <tr>
           <td><%= category.name %></td>
-           <td><%= button_to 'Deletar', category, method: :delete  %></td>
+          <td><%= button_to 'Deletar', category, method: :delete  %></td>
+          <td><%= link_to 'Editar', edit_category_path(category) %></td>
         </tr>
       <% end %>
     </tbody>
