--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
           <%= current_user.email %> |
           <%= link_to 'Clientes', clients_path %> |
           <%= link_to 'Categorias de Produtos', categories_path %> |
+          <%= link_to 'Ver Produtos', products_path %> |
           <%= button_to 'Sair', destroy_user_session_path, method: :delete %>
         <% else %>
           <%= link_to 'Entrar', new_user_session_path %>
