--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,7 +15,7 @@
     <tbody>
       <% @products.each do |product| %>
         <tr>
-          <td><%= product.name %></td>
+          <td><%= link_to product.name, product %></td>
           <td><%= product.value %></td>
           <td><%= product.category.name %></td>
         </tr>
