Add new view to product

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Todos os Produtos</h1>
+<%= link_to 'Cadastrar Produto', new_product_path %>
 
 <% if @products.empty? %>
   <p>Não há produto cadastrado</p>
