--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,6 +19,7 @@
           <td><%= link_to product.name, product %></td>
           <td><%= product.value %></td>
           <td><%= product.category.name %></td>
+          <td><%= button_to 'Deletar', product, method: :delete  %></td>
         </tr>
       <% end %>
     </tbody>
