--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,6 +20,7 @@
           <td><%= product.value %></td>
           <td><%= product.category.name %></td>
           <td><%= button_to 'Deletar', product, method: :delete  %></td>
+          <td><%= link_to 'Editar', edit_product_path(product) %></td>
         </tr>
       <% end %>
     </tbody>
