Add delete function to order

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -14,5 +14,8 @@
 </div>
 
 <div>
+  <%= button_to 'Deletar', order_path(@order), method: :delete %>
+</div>
+<div>
   <%= link_to 'Voltar', orders_path %>
 </div>
