--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -16,6 +16,14 @@
 </div>
 
 <div>
+  <dl>
+    <dt><strong>Produtos </strong></dt>
+    <% OrderProduct.where(order_id: @order.id).each do |product| %>
+      <dd><%= Product.find_by(id: product.product_id).name %> - R$ <%= Product.find_by(id: product.product_id).value%></dd>
+    <% end %>
+</div>
+
+<div>
   <%= button_to 'Deletar', order_path(@order), method: :delete %>
 </div>
 <div>
