Add email to client

--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -3,7 +3,11 @@
     <%= f.label :name %>
     <%= f.text_field :name %>
   </div>
-   <div>
+  <div>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+  </div>
+  <div>
     <%= f.label :address %>
     <%= f.text_field :address %>
   </div>
