--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -4,6 +4,8 @@
   <dl>
     <dt><strong>Nome: </strong></dt>
     <dd><%= @client.name %></dd>
+    <dt><strong>Email: </strong></dt>
+    <dd><%= @client.email %></dd>
     <dt><strong>Endereço: </strong></dt>
     <dd><%= @client.address %></dd>
     <dt><strong>Cidade: </strong></dt>
