--- a/app/views/categories/filter_product.html.erb
+++ b/app/views/categories/filter_product.html.erb
@@ -1,4 +1,4 @@
-<h1>Produtos de <%= @category.name %>
+<h1>Produtos de <%= @category.name %></h1>
 
 <% if @products.empty? %>
   <p>Não há produto nessa categoria</p>
